# mate-applet-switch

./: INSTALL  Makefile.am  README  autogen.sh  configure.ac
images/: Makefile.am
src/: Makefile.am  applet.h  org.mate.applets.SwitchApplet.mate-panel-applet.in  org.mate.panel.applet.SwitchApplet.gschema.xml.in  org.mate.panel.applet.SwitchApplet.service.in  switch.c
